# toyhouse_api

./: .gitignore  .rspec  Bean-gallery  Cargo.toml  Gemfile  LICENSE  README.md  build-to-bin.sh  go.mod  go.sum  index.html  lib.sh  main.go  package-lock.json  package.json
.github/workflows/: th-build.yml
app/controllers/: application_controller.rb  characters_controller.rb  raffles_controller.rb  request_controller.rb  requests_controller.rb  users_controller.rb
app/models/: AuthorizationsSpider.rb  CharacterDetailsSpider.rb  CharacterGallerySpider.rb  CharacterSpider.rb  UserSpider.rb
app/services/: ApplicationService.rb  SpiderManager.rb  ToyhouseManager.rb  ToyhouseScraper.rb
app/services/spiders/: AuthorizationsSpider.rb  CharacterCommentsSpider.rb  CharacterDetailsSpider.rb  CharacterFavoritesSpider.rb  CharacterGallerySpider.rb  CharacterSpider.rb  ToyhouseSpider.rb  UserSpider.rb  (+2 more)
config/: access_cookie.yml  application.rb  cable.yml  credentials.yml.enc  routes.rb
config/environments/: production.rb
gui/: package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
gui/src/: App.vue  main.ts
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: main.rs
lib/auth/: auth.go
lib/helpers/: raffle.go
lib/router/: router.go  router_test.go
lib/scraper/: scraper.go
lib/structs/: character.go  comment.go  image.go  image_metadata.go  ownership_log.go  profile.go  ticket.go
spec/controllers/: characters_controller_spec.rb  requests_controller_spec.rb  users_controller_spec.rb
static/: index.html
(+74 files in other folders)
