[package]
name = "gui"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "process-relaunch", "fs-create-dir", "fs-exists", "fs-write-file", "path-all", "fs-read-file", "fs-read-dir", "shell-sidecar", "dialog-all", "shell-open" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = {version = "0.11.20", features = ["stream"] }
futures = "0.3.28"
tokio = { version = "1", features = ["full"] }
[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
